--- a/templates/ajax/soul/settings.html.twig
+++ b/templates/ajax/soul/settings.html.twig
@@ -269,7 +269,7 @@
             </div>
 
             <div class="row">
-                <div class="cell rw-6 rw-lg-12">
+                <div class="cell {% if show_importer %}rw-6 rw-lg-12{% else %}rw-12{% endif%}">
                     <h5>{{ 'Darstellung'|trans({},'soul') }}</h5>
                     <div class="row">
                         <div class="padded cell rw-12">
@@ -308,22 +308,37 @@
                         </div>
                     </div>
                 </div>
-                <div class="cell rw-6 rw-lg-12">
-                    <div class="importSoulBanner">
-                        <h4>{{ 'Willkommen bei MyHordes!'|trans({},'welcome') }}</h4>
-                        <p>
-                            {{ 'Hast du ein Seele bei {hordes}, {dv}, {d2n} oder {zn}?'|trans({
-                                '{hordes}': '<i>Hordes</i>', '{dv}': '<i>Die Verdammten</i>', '{d2n}': '<i>Die2Nite</i>', '{zn}': '<i>Zombinoia</i>'
-                            },'soul')|raw }}
-                            <b>{{ 'Dann musst du nicht von Vorne beginnen!'|trans({},'soul') }}</b> {{ 'Importiere deine Seele und mache dort weiter, wo du aufgehört hast.'|trans({},'soul') }}
-                        </p>
-                        <button class="bigbutton" x-ajax-href="{{ url('soul_import') }}">
-                            <img class="float-left" alt="" src="{{ asset('build/images/icons/small_ghost_blue.gif') }}">
-                            <span>{{ 'Seele importieren'|trans({},'soul') }}</span>
-                            <img class="right" alt="" src="{{ asset('build/images/icons/small_ghost_blue.gif') }}">
-                        </button>
+                {% if show_importer %}
+                    <div class="cell rw-6 rw-lg-12">
+                        {% if importer_readonly %}
+                            <h5>{{ 'Importierte Seelen'|trans({},'soul') }}</h5>
+                        {% else %}
+                            <h5>{{ 'Seele importieren'|trans({},'soul') }}</h5>
+                        {% endif %}
+                        <div class="importSoulBanner">
+                            <h4>{{ 'Willkommen bei MyHordes!'|trans({},'welcome') }}</h4>
+                            <p>
+                                {{ 'Hast du ein Seele bei {hordes}, {dv}, {d2n} oder {zn}?'|trans({
+                                    '{hordes}': '<i>Hordes</i>', '{dv}': '<i>Die Verdammten</i>', '{d2n}': '<i>Die2Nite</i>', '{zn}': '<i>Zombinoia</i>'
+                                },'soul')|raw }}
+                                {% if importer_readonly %}
+                                    {{ '<b>Wenn du sie in der Vergangenheit importiert hast</b>, kannst du sie dir hier ansehen!'|trans({},'soul')|raw }}
+                                {% else %}
+                                    <b>{{ 'Dann musst du nicht von Vorne beginnen!'|trans({},'soul') }}</b> {{ 'Importiere deine Seele und mache dort weiter, wo du aufgehört hast.'|trans({},'soul') }}
+                                {% endif %}
+                            </p>
+                            <button class="bigbutton" x-ajax-href="{{ url('soul_import') }}">
+                                <img class="float-left" alt="" src="{{ asset('build/images/icons/small_ghost_blue.gif') }}">
+                                {% if importer_readonly %}
+                                    <span>{{ 'Importierte Seelen'|trans({},'soul') }}</span>
+                                {% else %}
+                                    <span>{{ 'Seele importieren'|trans({},'soul') }}</span>
+                                {% endif %}
+                                <img class="right" alt="" src="{{ asset('build/images/icons/small_ghost_blue.gif') }}">
+                            </button>
+                        </div>
                     </div>
-                </div>
+                {% endif %}
             </div>
 
             {% if is_granted("ROLE_ADMIN") %}
