--- a/templates/ajax/soul/import_preview.html.twig
+++ b/templates/ajax/soul/import_preview.html.twig
@@ -93,12 +93,22 @@
 
             <div class="green-note">
                 {% if not select_main_soul and main_soul %}
-                    <b>{{ 'Dies ist deine Hauptseele.'|trans({},'soul') }}</b> {{ 'Seelenpunkte, Auszeichnungen und Heldenerfahrung von dieser Seele können in dein MyHordes-Profil importiert werden.'|trans({},'soul') }}
+                    <b>{{ 'Dies ist deine Hauptseele.'|trans({},'soul') }}</b>
+                    {% if limited %}
+                        {{ 'In der Vergangenheit importierte Seelenpunkte, Auszeichnungen und Heldenerfahrung von dieser Seele sind deinem MyHordes-Profil gutgeschrieben worden. Neu hinzu gekommene Seelenpunkte, Auszeichnungen und Heldenerfahrung werden jedoch nur in einem gesonderten Bereich deiner Seele angezeigt.'|trans({},'soul') }}
+                    {% else %}
+                        {{ 'Seelenpunkte, Auszeichnungen und Heldenerfahrung von dieser Seele können in dein MyHordes-Profil importiert werden.'|trans({},'soul') }}
+                    {% endif %}
                 {% elseif not select_main_soul and not main_soul %}
                     <b>{{ 'Dies ist nicht deine Hauptseele.'|trans({},'soul') }}</b> {{ 'Seelenpunkte, Auszeichnungen und Heldenerfahrung können nur von deiner Hauptseele in dein MyHordes-Profil importiert werden.'|trans({},'soul') }}
                 {% else %}
                     <img alt="" src="{{ asset('build/images/icons/small_hero_up.gif') }}">  <b>{{ 'Möchtest du diese Seele zu deiner Hauptseele erklären?'|trans({},'soul') }}</b>
-                    <p>{{ 'Seelenpunkte, Auszeichnungen und Heldenerfahrung können nur von einer Seele importiert werden - deiner Hauptseele. Überlege dir deine Entscheidung gut, denn du kannst die Wahl deiner Hauptseele später nicht mehr ändern!'|trans({},'soul') }}</p>
+                    {% if limited %}
+                        <p>{{ 'Hiermit markierst du die Seele, mit der du dich am meisten identifizierst. Es kann nur eine importierte Seele zur Hauptseele erklärt werden. Überlege dir deine Entscheidung gut, denn du kannst die Wahl deiner Hauptseele später nicht mehr ändern!'|trans({},'soul') }}</p>
+                        <p><b>{{ 'Da du bereits Punkte auf MyHordes gesammelt hast, kannst du nicht länger Seelenpunkte, Auszeichnungen und Heldenerfahrung von einer importierten Seele übernehmen.'|trans({},'soul') }}</b></p>
+                    {% else %}
+                        <p>{{ 'Seelenpunkte, Auszeichnungen und Heldenerfahrung können nur von einer Seele importiert werden - deiner Hauptseele. Überlege dir deine Entscheidung gut, denn du kannst die Wahl deiner Hauptseele später nicht mehr ändern!'|trans({},'soul') }}</p>
+                    {% endif %}
 
                     {% if preview %}
                         <p>{{ 'Du musst diese Entscheidung nicht jetzt treffen, sondern kannst diese Seele auch nachträglich noch zu deiner Hauptseele erklären - solange du inzwischen nicht bereits eine andere Seele als Hauptseele gewählt hast.'|trans({},'soul') }}</p>
@@ -349,7 +359,7 @@
                     } )
             });
 
-            {% if select_main_soul %}
+            {% if select_main_soul and not limited %}
                 document.getElementById('chk_make_main').addEventListener('change', function() {
                     if (document.getElementById('chk_make_main').checked)
                         $.html.forEach('[x-only-main]', element => { if (element.classList.contains('dashboard')) element.removeAttribute('disabled'); else element.classList.add('hidden') } );
