--- a/templates/ajax/soul/view_town_content.html.twig
+++ b/templates/ajax/soul/view_town_content.html.twig
@@ -80,7 +80,9 @@
                 {% if not citizen.disabled and not town.disabled %}
                     +{{sp}}
                 {% elseif is_granted('ROLE_CROW') %}
-                    <div style="{% if citizen.disabled %}color: red;{% endif %} {% if town.disabled %}opacity: 0.5;{% endif %}">+{{sp}}</div>
+                    <div style="{% if citizen.disabled %}color: {% if citizen.limitedImport %}rosybrown{% else %}red{% endif %};{% endif %} {% if town.disabled %}opacity: 0.5;{% endif %}">+{{sp}}</div>
+                {% elseif not (citizen.disabled and not citizen.limitedImport) and not town.disabled %}
+                    +{{sp}}
                 {% endif %}
                 {% if is_granted('ROLE_CROW') %}
                     {% if not citizen.disabled %}
@@ -103,6 +105,9 @@
                 <span class="link" x-ajax-href="{{ path('soul_visit', {id: citizen.user.id}) }}">{{citizen.user.name}}</span>
             </div>
             <div class="padded cell rw-4 rw-lg-3 hide-sm">
+                {% if is_granted("ROLE_CROW") and citizen.limitedImport %}
+                    <div><b style="color: rosybrown">{{ 'Eingeschränkter Import'|trans({},'admin') }}</b></div>
+                {% endif %}
                 {% if citizen.cod is not null %}
                     {{citizen.cod.label|trans({}, 'game')}}
                 {% else %}
