--- a/templates/ajax/public/apidocs.html.twig
+++ b/templates/ajax/public/apidocs.html.twig
@@ -34,6 +34,8 @@
    cadavers: Array<a class="custom">&lt;Cadaver&gt;</a>,       // {{ 'Liste der Leichen'|trans({},'docs') }}
    expeditions: Array<a class="custom">&lt;Expedition&gt;</a>, // {{ 'Liste der Expeditionen'|trans({},'docs') }}
    season: <span class="int">Int</span>,                    // {{ 'City Creation Season ID'|trans({},'docs') }}
+   phase: <span class="string">String</span>,                  // {{ 'Phase der Stadt; entweder "alpha", "beta", "import" oder "native"'|trans({},'docs') }}
+   source: <span class="string">String</span>,                 // {{ 'Herkunfts-Server der Stadt'|trans({},'docs') }}
    shaman: <span class="int">Int</span>,                    // {{ 'UID des Spielers, der Schamane ist'|trans({},'docs') }}
    guide: <span class="int">Int</span>                      // {{ 'UID des Spielers, der Reiseleiter in der Außenwel ist'|trans({},'docs') }}
 }
