--- a/templates/ajax/game/beyond/desert.html.twig
+++ b/templates/ajax/game/beyond/desert.html.twig
@@ -460,6 +460,10 @@
                     {% endembed %}
                 {% endif %}
 
+                {% if is_granted('ROLE_CROW') and app.environment == 'dev' %}
+                    <button x-ajax-href="{{ path('admin_town_explorer', {id: town.id, tab: null}) }}"><img alt="" src="{{ asset('build/images/icons/small_admin.gif') }}">{{ 'Admin Dashboard'|trans({},'admin') }}</button>
+                {% endif %}
+
             </div>
 
             {% if not zone.townZone %}
