--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -798,7 +798,7 @@ ul.actions, ul.special_actions, ul.heroic_actions {
         margin: 0; padding: 0; font-size: 0; max-height: 300px; overflow-y: auto;
         &>li {
           &:not(.line) { display: inline-block; cursor: pointer; }
-          &>div { font-size: 1.2rem; display: inline-block }
+          &>div:not(.tooltip) { font-size: 1.2rem; display: inline-block }
           list-style: none; padding: 2px; margin: 2px; border: 1px solid transparent;
           &:not(.line):hover { background: saturate( @myhordes-smalltext, 30% ); border-color: darken(@myhordes-smalltext, 20%) }
         }
