--- a/templates/ajax/game/actions.html.twig
+++ b/templates/ajax/game/actions.html.twig
@@ -6,13 +6,12 @@
 {% endif %}
 
 {% if not hidden %}
-    {% macro target_popup( action_id, provoking_id, targets, target_for, text_having, text_missing, close_button = false, big = false, confirm = false, confirmMsg = null, action_button = null ) %}
+    {% macro target_popup( action_id, provoking_id, targets, target_for, text_having, text_missing, close_button = false, big = false, confirm = false, confirmMsg = null, action_button = null, item_tooltip = false ) %}
         <div class="targets" x-target-selection-for="{{ target_for }}">
             {% if targets|length > 0 %}
                 <span>{{ text_having }}</span>
                 <ul>
                     {% for target in targets %}
-                        {# @var item \App\Entity\Item #}
                         <li class="{{ action_button is null ? '' : 'line' }}" {% if action_button is null %}x-action-id="{{ action_id }}" {% if confirm %}x-action-confirm="1"{% endif%} {% if not confirmMsg is null %}x-confirm-msg="{{ confirmMsg|trans({'{target}':target[1] }, 'items') }}"{% endif%} {% if provoking_id is not null %}x-provoking-id="{{ provoking_id }}"{% endif %} x-target-id="{{ target[0] }}"{% endif %} >
                             {% if big or action_button is not null %}
                                 <div><img src="{{ asset(target[2]) }}" alt="{{ target[1] }}"> {{ target[1] }}</div>
@@ -22,6 +21,7 @@
                             {% else %}
                                 <img src="{{ asset(target[2]) }}" alt="{{ target[1] }}">
                             {% endif %}
+                            {% if item_tooltip %}{% embed "ajax/game/item_tooltip.html.twig" with {"item": target[3]} %}{% endembed %}{% endif %}
                         </li>
                     {% endfor %}
                 </ul>
@@ -55,7 +55,9 @@
                         {% endif %}
                         <span>{{ '{action}: {item}'|trans({'{action}': entry.action.label|trans({},'items')|e('html'), '{item}': '<b>' ~ entry.item.prototype.label|trans({},'items')|e('html') ~ '</b>'},'items')|raw }}</span>
                         {% if entry.targets is not null and not entry.crossed and not ( entry.broken is defined and entry.broken ) %}
-                            {% if entry.target_mode in [2,3,4,5] %}
+                            {% if entry.target_mode == 1 %}
+                                {{ _self.target_popup( entry.id, entry.item.id, entry.targets, entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg, null, true ) }}
+                            {% elseif entry.target_mode in [2,3,4,5] %}
                                 {{ _self.target_popup( entry.id, entry.item.id, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--' ~ entry.item.id, 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
                             {% elseif entry.target_mode == 6 %}
                                 {% set target_poison = 'can_poison'|items|map(i => '<span class="highlight"><img src="' ~ asset('build/images/item/item_' ~ i.icon ~ '.gif')  ~ '" alt="">' ~ i.label|trans({},'items') ~ '</span>') %}
@@ -163,8 +165,10 @@
                     {% if entry.targets is not null and not entry.crossed %}
                         {% if entry.target_mode == 2 %}
                             {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--special', 'Einen Bürger heimbringen:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
-                        {% elseif entry.target_mode == 0 or entry.target_mode == 1 %}
+                        {% elseif entry.target_mode == 0 %}
                             {{ _self.target_popup( entry.id, null, entry.targets, entry.id ~ '--special', 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg ) }}
+                        {% elseif entry.target_mode == 1 %}
+                            {{ _self.target_popup( entry.id, null, entry.targets, entry.id ~ '--special', 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg, null, true ) }}
                         {% elseif entry.target_mode in [3,4,5] %}
                             {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--special', 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
                         {% elseif entry.target_mode == 7 %}
@@ -201,8 +205,10 @@
                     {% if entry.targets is not null and not entry.crossed %}
                         {% if entry.target_mode == 2 %}
                             {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--hero', 'Einen Bürger heimbringen:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
-                        {% elseif entry.target_mode == 0 or entry.target_mode == 1 %}
+                        {% elseif entry.target_mode == 0 %}
                             {{ _self.target_popup( entry.id, null, entry.targets, entry.id ~ '--hero', 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg ) }}
+                        {% elseif entry.target_mode == 1 %}
+                            {{ _self.target_popup( entry.id, null, entry.targets, entry.id ~ '--hero', 'Bitte wähle einen Gegenstand:'|trans({},'game'), 'Du verfügst über keine geeigneten Gegenstände'|trans({},'game'), true, false, entry.action.confirm, entry.action.confirmMsg, null, true ) }}
                         {% elseif entry.target_mode in [3,4,5,7] %}
                             {{ _self.target_popup( entry.id, null, entry.targets|sort((a,b) => a[1]|lower <=> b[1]|lower), entry.id ~ '--hero', 'Bitte wähle einen Bürger:'|trans({},'game'), 'Es ist kein Bürger in der Nähe...'|trans({},'game'), true, true, entry.action.confirm, entry.action.confirmMsg ) }}
                         {% endif %}
