--- a/templates/ajax/game/town/construction.html.twig
+++ b/templates/ajax/game/town/construction.html.twig
@@ -147,7 +147,14 @@
             </div>
             <div class="padded cell rw-1 rw-lg-2 rw-sm-12 right">
                 {% if buildable and (building.ap < ((building.prototype.ap * workshopBonus)|round) or not building.complete) or (building.complete and building.hp < building.prototype.hp) %}
-                    <button class="inline build-btn" {% if (not res_ok) or disable_all %}disabled{% else %}x-building-id="{{ building.id }}"{% endif %}>{% if not building.complete %}<i class="fa fa-plus"></i>{% else %}<img src="{{ asset('build/images/icons/small_refine.gif') }}" alt="" style="margin-right: 0px;" />{% endif %}</button>
+                    <button class="inline build-btn" {% if (not res_ok) or disable_all %}disabled{% else %}x-building-id="{{ building.id }}"{% endif %}>
+                        {% if not building.complete %}
+                            <i class="fa fa-plus"></i>
+                        {% else %}
+                            <img src="{{ asset('build/images/icons/small_refine.gif') }}" alt="" style="margin-right: 0px;" />
+                            <div class="tooltip help">{{ 'Für die vollständige Instandsetzung dieses Gebäudes sind noch {remaining} AP erforderlich.'|trans({remaining: ((building.prototype.hp - building.hp)/hpToAp)|round(0, 'ceil')}, 'game') }}</div>
+                        {% endif %}
+                    </button>
                 {% endif %}
             </div>
         </div>
