--- a/templates/ajax/forum/editor.html.twig
+++ b/templates/ajax/forum/editor.html.twig
@@ -136,7 +136,7 @@
                     <div class="lightbox" x-tab-group="forum-classic-editor-toolbox" x-tab-id="emotes" x-tab-target>
                         <div class="forum-button-bar">
                             {% for tag,url in emotes %}
-                                <div x-forum-action="edit" x-text-emote="{{ asset(url) }}" x-text-insert-emote="{{ tag }}" class="forum-button-inline"><img alt="{{ tag }}" src="{{ asset(url) }}"></div>
+                                <div x-forum-action="edit" x-text-emote="{% if url['i18n'] %}{{ asset(url['display'])|replace({'{lang}': 'fr'}) }}{% else %}{{ asset(url['display']) }}{% endif %}" x-text-insert-emote="{{ tag }}" class="forum-button-inline"><img alt="{{ tag }}" src="{% if url['i18n'] %}{{ asset(url['display'])|replace({'{lang}': (app.request.locale|e('html_attr')|split('_', 2))[0] }) }}{% else %}{{ asset(url['display']) }}{% endif %}"></div>
                             {% endfor %}
                         </div>
                     </div>
