--- a/templates/ajax/game/town/posts.html.twig
+++ b/templates/ajax/game/town/posts.html.twig
@@ -66,7 +66,7 @@
                 {% if post.hidden %}
                     <div class="crowmsg {% if not app.user.preferSmallAvatars %}fixMargin{% endif %}">{{ 'Der Rabe hat diese Nachricht zerrissen.'|trans({},'game') }}</div>
                 {% else %}
-                    {{ post.text|raw }}
+                    {{ post.text|replace({'{lang}': (app.request.locale|e('html_attr')|split('_', 2))[0] })|raw }}
                 {% endif %}
 
                 {% if post.modMessage %}
