--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -48,7 +48,7 @@
 
       &#newspage-front {
         margin-left: 0;
-        div#gazette-content { font-size: 2.5vw; }
+        div#gazette-content { font-size: 2.5vw; max-height: 35.5%; }
         div#gazette-headline { font-size: 3.2vw; top: 13%; }
         div#gazette-signature { font-size: 2.5vw; }
         div#gazette-deaths { font-size: 3vw; }
