--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -760,6 +760,9 @@ ul.list{
         top: 20%;
         left: 7%;
 
+        max-height: 128px;
+        overflow: auto;
+
         p {
           letter-spacing: -0.1em;
 
