Added CSS classes

--- a/templates/ajax/game/town/home.html.twig
+++ b/templates/ajax/game/town/home.html.twig
@@ -133,7 +133,7 @@
         </div>
 
         <div class="row">
-            <div class="padded cell rw-6 rw-md-12 citizen-home">
+            <div class="padded cell rw-6 rw-md-12 citizen-home actions-box">
                 <h5>{% trans from 'game' %}Meine Spezialaktionen{% endtrans %}</h5>
                 {% embed "ajax/game/actions.html.twig" with {'special_action_list': special_actions} %}
                 {% endembed %}
