--- a/templates/ajax/game/town/well.html.twig
+++ b/templates/ajax/game/town/well.html.twig
@@ -63,7 +63,7 @@
                     </div>
                 {% endif %}
             {% endif %}
-            <p>
+            <p class="actions-box">
                 {% if first_take or pump is null %}
                     <button x-well-confirm="0" x-well-direction="up" {% if not allow_take or rations_left <= 0 %}disabled{% endif %}><img alt="" src="{{ asset('build/images/item/item_water.gif') }}" />{% trans from 'game' %}Deine Ration Wasser erhalten{% endtrans %}</button>
                 {% else %}
