--- a/templates/ajax/game/town/dashboard.html.twig
+++ b/templates/ajax/game/town/dashboard.html.twig
@@ -138,7 +138,7 @@
                 </div>
             {% endif %}
 
-            <div class="padded cell rw-6 rw-md-8 rw-sm-12">
+            <div class="padded cell rw-6 rw-md-8 rw-sm-12 actions-box">
                 <button x-ajax-href="{{ url('game_newspaper') }}">{% trans from 'game' %}Lesen Sie das Mitteilungsblatt{% endtrans %}</button>
                 {% if is_granted('ROLE_CROW') and app.environment == 'dev' %}
                     <button x-ajax-href="{{ path('admin_town_explorer', {id: town.id, tab: null}) }}"><img alt="" src="{{ asset('build/images/icons/small_admin.gif') }}">{{ 'Admin Dashboard'|trans({},'admin') }}</button>
