--- a/templates/ajax/game/beyond/beyond.html.twig
+++ b/templates/ajax/game/beyond/beyond.html.twig
@@ -89,6 +89,10 @@
                                     
                                     </div>
                                     <div class="cell rw-5 right"><span>{% if zone.x != 0 or zone.y != 0 %}{% trans with {'{points}': zone_zombies} from 'game' %}{points} Punkt(e){% endtrans %}{% else %}--{% endif %}</span> <img src="{{ asset('build/images/icons/small_zombie.gif') }}" alt="ZP" /></div>
+                                    <div class="tooltip help">
+                                        {{ 'Jeder Mensch zählt 2 Punkte, Zombies zählen je 1 Punkt.'|trans({}, 'game') }}<br />
+                                        <em>{{ 'Wenn die Gesamtpunktzahl aller Menschen in einer Zone <strong>mindestens so groß</strong> wie die der Zombies ist, kann dir nichts geschehen... vorerst zumindest.'|trans({}, 'game')|raw }}</em>
+                                    </div>
                                 </div>
                                 {% if zone.x != 0 or zone.y != 0 %}
                                     <div class="row zone-dist note note-light">
