Fix cp color issue

--- a/assets/less/modules/beyond.less
+++ b/assets/less/modules/beyond.less
@@ -110,8 +110,8 @@ div.zone-info {
       background-color: #5c2b20;
     }
     &.zone-cp>.cell{
-      &:first-child { color: #d6f523; }
-      &:last-child { color: #f15b30; }
+      .humans-cp { color: #d6f523; }
+      .zombies-cp { color: #f15b30; }
     }
     &.zone-dist { 
       padding: 0px 0px 0px 0px;
