--- a/templates/ajax/game/town/dashboard.html.twig
+++ b/templates/ajax/game/town/dashboard.html.twig
@@ -230,7 +230,7 @@
         </div>
     </div>
 
-        <div class="row">
+        <div class="row expert-mode">
             <div class="cell rw-12 small">
                 <img src="{{ asset('build/images/icons/small_expert.gif') }}" alt="">
                 <a href="#" x-toggle-expert-mode>{{ 'Zum Anfängermodus zurückkehren'|trans({}, 'game') }}</a>
